--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,13 @@ body{
 .carrossel{
     background-color: #111;
 }
+.videos_carrossel{
+    border-color: black;
+    border-radius: 5%;
+    width: 100%;
+    height: 450px;
+    padding: 5%;
+}
 .carousel-inner{
     height: 50%;
     padding-bottom: 5%;
