--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ body{
 .titulo_titulo{
     color:rgba(237, 237, 237, 0.847);
     text-align: center;
+    padding-bottom: 2%;
 }
 .destaque_titulo{
     color: aliceblue;
@@ -177,6 +178,7 @@ footer{
 @media screen and (max-width: 767px){
     .texto_materia{
         padding-top: 5%;
+        padding-bottom: 10%;
     }
 }
 @media screen and (min-width: 768px) and (max-width: 991px){
